# gitdis

./: .gitignore  Cargo.toml  README.md
gcs/: Cargo.toml
gcs/src/: main.rs
gcs/src/git_dis/: branch_handler.rs  git_dis.rs  mod.rs  services.rs
gcs/src/server/: mod.rs
gcs/src/server/routers/: git_dis.rs  mod.rs
gitdis/: Cargo.toml
gitdis-http/: Cargo.toml
gitdis-http/src/: http.rs  main.rs
gitdis-http/src/routers/: gitdis.rs  mod.rs  routes.rs
gitdis/src/: branch_handler.rs  branch_settings.rs  cache.rs  cache_branch.rs  gitdis.rs  lib.rs  payload.rs  prelude.rs  services.rs  tests.rs
memotree/: Cargo.toml
memotree/src/: branch.rs  cache.rs  condition.rs  lib.rs  tree.rs
memotree/src/condition/: condition.rs  mod.rs
memotree/src/condition/parser/: json.pest  mod.rs
quickleaf/: Cargo.toml  README.md
quickleaf/src/: quickleaf.rs  tests.rs
