[package]
name = "gcs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
memotree = { path = "../memotree" }
yaml2json = "0.1.3"
log = "0.4.22"
env_logger = "0.11.3"
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"