[package]
name = "gitdis-http"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.6"
axum = "0.7.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
gitdis = { path = "../gitdis" }

[dev-dependencies]
dotenv = "0.15.0"
